# luaSandboxes

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml
cmake/: Tests.cmake  ThirdPartyDependencies.cmake
src/lua/: runtime.cpp  runtime.hpp  utils.cpp  utils.hpp
src/utils/: log.hpp
tests/lua/: test_limitedAlloc.cpp  test_sandbox_fs.cpp  test_sandbox_libs.cpp  test_timeoutGuard.cpp
